--- a/index.html
+++ b/index.html
@@ -25,21 +25,22 @@
                                                     <!-- HEADER -->
         <header>
             <div class="wrapper">
-                <div class="logo">
-                    <span>Logo</span>
-                    <a href=""></a>
-                </div>
+                <a href="" class="logo">
+                    <span>Ремонт <i><img src="images/plus.png" alt=""></i></span>
+                </a>
                 <nav><!-- start nav -->
                     <ul>
-                        <li><a href="#" class="active">Главная</a></li>
-                        <li><a href="#">Портфолио</a></li>
-                        <li><a href="#">Разработка</a></li>
-                        <li><a href="#">Продвижение</a></li>
-                        <li><a href="#">О компании</a></li>
+                        <li><a href="#" class="active">О компании</a></li>
+                        <li><a href="#">Наши услуги</a></li>
+                        <li><a href="#">Примеры работ</a></li>
+                        <li><a href="#">Отзывы</a></li>
                         <li><a href="#">Контакты</a></li>
                     </ul>
                 </nav><!-- end nav -->
-                <button class="button">Заказать приложение</button>
+                <div class="contactUs">
+                    <a href="tel:+7 (926) 898-84-70" class="tel">+7 (926) 898-84-70</a>
+                    <a href="" class="order">Заказать звонок</a>
+                </div>
             </div><!-- end wrapper -->
         </header><!-- end header -->
         
@@ -53,11 +54,165 @@
         <!--=================================================================================================-->
                                                     <!-- OFFER SECTION -->
         <section class="offer">
-            <div class="offerInfo wrapper"><!-- start offerInfo -->
-                <h1>We offer you to meet people whose ideas and views would be interesting for you! <br> Listen, discuss, learn.</h1>
-                <button class="button"><span>Заказать</span></button>
+            <div class="wrapper"><!-- start offerInfo -->
+                <h1>Ремонтируем <span>квартиры</span> и <span>офисы</span><br> в Москве и Московской области</h1>
+                <p class="subTitle">Профессиональный подход ― Безупречный результат!</p>
+                <p class="blueInfo">Гарантия 2 года на все виды услуг</p>
+
+                <div class="offerForm">
+                    <p>Заполните форму ― узнайте, как мы поможем  сэкономить 10% на стоимости материалов</p>
+                    <button class="button">Заполнить форму</button>
+                </div>
             </div><!-- end offerInfo -->
         </section><!-- end offer section --> 
+
+
+        <!--=================================================================================================-->
+                                                    <!-- About SECTION -->
+        <section class="about">
+            <div class="wrapper"><!-- start offerInfo -->
+               <h2>Компания Ремонт плюс</h2>
+
+               <div class="aboutInfo">
+                   <div class="aboutInfo__item">
+                       <div class="aboutInfo__item__img">
+                           <img src="" alt="">
+                       </div>
+                       <span><b>9 лет </b>успешной работы на рынке</span>
+                   </div>
+                    <div class="aboutInfo__item">
+                       <div class="aboutInfo__item__img">
+                           <img src="" alt="">
+                       </div>
+                       <span><b>Более 170 </b>выполненных проектов</span>
+                   </div>
+                   <div class="aboutInfo__item">
+                       <div class="aboutInfo__item__img">
+                           <img src="" alt="">
+                       </div>
+                       <span><b>5 бригад</b> высококлассных специалистов</span>
+                   </div>
+                    <div class="aboutInfo__item">
+                       <div class="aboutInfo__item__img">
+                           <img src="" alt="">
+                       </div>
+                       <span>Прорабы с <b>профильным образованием</b></span>
+                   </div>
+               </div>
+
+            </div><!-- end offerInfo -->
+        </section><!-- end offer section --> 
+
+
+
+        <!--=================================================================================================-->
+                                                    <!-- Why SECTION -->
+        <section class="why">
+            <div class="wrapper"><!-- start wrapper -->
+
+                <ul>
+                    <h3>Почему многие люди боятся ремонта, как огня?</h3>
+                    <li>«Серые» ремонтные бригады срывают сроки</li>
+                    <li>Качество работ оставляет желать лучшего</li>
+                    <li>Нет гарантии на ремонтные работы</li>
+                    <li>Смета растет, как на дрожжах, за счет неучтенных расходов</li>
+                    <li>Мастера ошибаются или обманывают при закупке материалов</li>
+                    <li>Соседи жалуются на шумные работы вечером</li>
+                </ul>
+
+                <ul>
+                    <h3>Компания Ремонт плюс предлагает:</h3>
+                    <li>Заключение официального договора</li>
+                    <li>Закупку и доставку материалов</li>
+                    <li>Строительный надзор за ремонтными работами</li>
+                    <li>Гарантию 2 года – на любые виды услуг!</li>
+                    <li>Соседи жалуются на шумные работы вечером</li>
+                    <li>Точное соблюдение сроков</li>
+                    <li>Ежедневное информирование о расходовании средств</li>
+                    <li>Выполнение шумных работ быстро и только в разрешенное время</li>
+                    <li>Точное соблюдение технологии проведения каждого вида работ</li>
+                    <li>Оплату по факту выполненных работ</li>
+                </ul>
+
+            </div><!-- end wrapper -->
+        </section><!-- end why section -->
+
+
+        <!--=================================================================================================-->
+                                                    <!-- Advantage SECTION -->
+        <section class="advantage">
+            <div class="wrapper"><!-- start wrapper -->
+
+                <h2>Наш самый большой плюс: </h2>
+                <p>Мы составляем смету качественно и с умом. Стоимость проекта в ходе ремонтных работ не меняется!</p>
+                <p>Если что-то не учтено по нашей вине ― сделаем за свой счет!</p>
+
+            </div><!-- end wrapper -->
+        </section><!-- end advantage section -->
+
+
+        <!--=================================================================================================-->
+                                                    <!-- Options SECTION -->
+        <section class="options">
+            <div class="wrapper"><!-- start wrapper -->
+
+                <h2>Какой вид ремонта Вам подходит?</h2>
+                
+                <div class="repairOptions">
+                    <div class="repairOptions__item">
+                        <div class="repairOptions__item__img">
+                            <img src="images/opt_1.jpg" alt="">
+                            <button class="more">Подробнее</button>
+                        </div>
+                        <span>Экономичный вариант</span>
+                        <button class="button">Оставить заявку</button>
+                    </div>
+
+                    <div class="repairOptions__item">
+                        <div class="repairOptions__item__img">
+                            <img src="images/opt_2.jpg" alt="">
+                            <button class="more">Подробнее</button>
+                        </div>
+                        <span>Оптимальный вариант</span>
+                        <button class="button">Оставить заявку</button>
+                    </div>
+
+                    <div class="repairOptions__item">
+                        <div class="repairOptions__item__img">
+                            <img src="images/opt_3.jpg" alt="">
+                            <button class="more">Подробнее</button>
+                        </div>
+                        <span>Вариант “Люкс”</span>
+                        <button class="button">Оставить заявку</button>
+                    </div>
+                </div><!-- end repairOptions -->
+
+            </div><!-- end wrapper -->
+        </section><!-- end Options section -->
+
+
+        <!--=================================================================================================-->
+                                                    <!-- Why SECTION -->
+        <section class="whyProfitable">
+            <div class="wrapper"><!-- start wrapper -->
+                <h2 class="white">Почему заказывать ремонт у нас выгодно?</h2>
+                <ul>
+                    <li>
+                        <h3>Экономим ваши деньги.</h3>
+                        Мы точно рассчитываем необходимое количество черновых и отделочных материалов и не переплачиваем за них. При замерах учитываем все конструктивные особенности помещения, которые могут сказаться на стоимости ремонта.
+                    </li>
+                    <li>
+                        <h3>Экономим ваше время.</h3>
+                        Все сроки в договоре – реальные! Точность – вежливость королей и правильных мастеров!
+                    </li>
+                    <li>
+                        <h3>Экономим ваши нервные клетки.</h3>
+                        С нами вы не волнуетесь о том, что смета «раздуется», соседи будут недовольны шумом, а после ремонта в квартире/офисе и подъезде останется мусор.
+                    </li>
+                </ul>
+
+            </div><!-- end wrapper -->
+        </section><!-- end why section -->
 
 
   	    <!-- //////////////////////////////////////////////////////////////////////// -->
