--- a/index.html
+++ b/index.html
@@ -191,6 +191,139 @@
         </section><!-- end Options section -->
 
 
+
+         <!--=================================================================================================-->
+                                                    <!-- Offices SECTION -->
+        <section class="Offices">
+            <div class="wrapper"><!-- start wrapper -->
+                <h2>Ремонт офисов</h2>
+
+                <ul class="tabsChange"><!-- start tabs changer -->
+                    <li href="tab_of_1" class="active">Косметический ремонт офиса</li>
+                    <li href="tab_of_2">Капитальный ремонт офис</li>
+                </ul>
+
+                <div class="tabs"><!-- start tabs -->
+
+                    <div class="tabs__item active" id="tab_of_1">
+                        <div class="tabs__item__img">
+                            <img src="images/repair_of.jpg" alt="">
+                        </div>
+                        <div class="tabs__item__info">
+                            <span class="title">Что входит в стоимость?</span>
+                            <ul>
+                                <li>Удаление старой отделки с пола, потолка, стен</li>
+                                <li>Грунтовка, шпаклевка, отделка стен под окраску</li>
+                                <li>Окрашевание или оклеивание стен обоями</li>
+                                <li>Очистка, ремонт и покраска двернных и оконных блоков</li>
+                            </ul>
+                        </div>
+                    </div><!-- end tab 1 -->
+
+                     <div class="tabs__item" id="tab_of_2">
+                        <div class="tabs__item__img">
+                            <img src="images/repair_of.jpg" alt="">
+                        </div>
+                        <div class="tabs__item__info">
+                            <span class="title">Что входит в стоимость?</span>
+                            <ul>
+                                <li>Удаление старой отделки с пола, потолка, стен</li>
+                                <li>Грунтовка, шпаклевка, отделка стен под окраску</li>
+                                <li>Окрашевание или оклеивание стен обоями</li>
+                                <li>Очистка, ремонт и покраска двернных и оконных блоков</li>
+                            </ul>
+                        </div>
+                    </div><!-- end tab 2 -->
+                </div><!-- end office tabs -->
+
+            </div><!-- end wrapper -->
+        </section><!-- end offices section -->
+
+
+
+         <!--=================================================================================================-->
+                                                    <!-- Examples SECTION -->
+        <section class="Examples">
+            <div class="wrapper"><!-- start wrapper -->
+                <h2>Примеры работ</h2>
+
+                <ul class="tabsChange"><!-- start tabs changer -->
+                    <li href="tab_ex_1" class="active">Квартиры</li>
+                    <li href="tab_ex_2">Офисы</li>
+                </ul>
+
+                <div class="tabs"><!-- start tabs -->
+
+                    <div class="tabs__item tabs__item--slider active" id="tab_ex_1">
+
+                        <div class="tabs__item__slide">
+                            <div class="tabs__item__img">
+                                <img src="images/repair_of.jpg" alt="">
+                            </div>
+                            <div class="tabs__item__info">
+                                <span class="title">Что входит в стоимость?</span>
+                                <ul>
+                                    <li>Удаление старой отделки с пола, потолка, стен</li>
+                                    <li>Грунтовка, шпаклевка, отделка стен под окраску</li>
+                                    <li>Окрашевание или оклеивание стен обоями</li>
+                                    <li>Очистка, ремонт и покраска двернных и оконных блоков</li>
+                                </ul>
+                            </div>
+                        </div><!-- end slide -->
+                        <div class="tabs__item__slide">
+                            <div class="tabs__item__img">
+                                <img src="images/repair_of.jpg" alt="">
+                            </div>
+                            <div class="tabs__item__info">
+                                <span class="title">Что входит в стоимость?</span>
+                                <ul>
+                                    <li>Удаление старой отделки с пола, потолка, стен</li>
+                                    <li>Грунтовка, шпаклевка, отделка стен под окраску</li>
+                                    <li>Окрашевание или оклеивание стен обоями</li>
+                                    <li>Очистка, ремонт и покраска двернных и оконных блоков</li>
+                                </ul>
+                            </div>
+                        </div><!-- end slide -->
+                        <div class="tabs__item__slide">
+                            <div class="tabs__item__img">
+                                <img src="images/repair_of.jpg" alt="">
+                            </div>
+                            <div class="tabs__item__info">
+                                <span class="title">Что входит в стоимость?</span>
+                                <ul>
+                                    <li>Удаление старой отделки с пола, потолка, стен</li>
+                                    <li>Грунтовка, шпаклевка, отделка стен под окраску</li>
+                                    <li>Окрашевание или оклеивание стен обоями</li>
+                                    <li>Очистка, ремонт и покраска двернных и оконных блоков</li>
+                                </ul>
+                            </div>
+                        </div><!-- end slide -->
+                    </div><!-- end tab 1 -->
+
+                     <div class="tabs__item tabs__item--slider" id="tab_ex_2">
+                         <div class="tabs__item__slide">
+                            <div class="tabs__item__img">
+                                <img src="images/repair_of.jpg" alt="">
+                            </div>
+                            <div class="tabs__item__info">
+                                <span class="title">Что входит в стоимость?</span>
+                                <ul>
+                                    <li>Удаление старой отделки с пола, потолка, стен</li>
+                                    <li>Грунтовка, шпаклевка, отделка стен под окраску</li>
+                                    <li>Окрашевание или оклеивание стен обоями</li>
+                                    <li>Очистка, ремонт и покраска двернных и оконных блоков</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div><!-- end tab 2 -->
+                </div><!-- end office tabs -->
+
+                <button class="button button--wide">Хочу также</button>
+
+            </div><!-- end wrapper -->
+        </section><!-- end Examples section -->
+
+
         <!--=================================================================================================-->
                                                     <!-- Why SECTION -->
         <section class="whyProfitable">
@@ -213,6 +346,7 @@
 
             </div><!-- end wrapper -->
         </section><!-- end why section -->
+
 
 
   	    <!-- //////////////////////////////////////////////////////////////////////// -->
