--- a/index.html
+++ b/index.html
@@ -240,6 +240,24 @@
         </section><!-- end offices section -->
 
 
+         <!--=================================================================================================-->
+                                                    <!-- Why SECTION -->
+        <section class="formSec">
+            <div class="wrapper"><!-- start wrapper -->
+                <p class="heading">Получите <span>бесплатный предварительный расчет стоимости ремонта <span>прямо сейчас!</span></p>
+                <form action="">
+                    <span class="inputWrap inputWrap--name">
+                        <input type="text" name="name" placeholder="Ваше имя">
+                    </span>
+                    <span class="inputWrap inputWrap--tel">
+                        <input type="text" name="tel" placeholder="Ваш телефон">
+                    </span>
+                    <button class="button button--wide">Получить расчет</button>
+                </form>
+            </div>
+        </section>
+
+
 
          <!--=================================================================================================-->
                                                     <!-- Examples SECTION -->
