--- a/index.html
+++ b/index.html
@@ -378,25 +378,25 @@
                 <div class="scheme__box">
                     <div class="scheme__box__row">
                         <div class="step">
-                            <div class="icon"></div>
+                            <div class="icon"><i class="scheme-phone"></i></div>
                             <div class="text">
                                 <p>Связываетесь с нами любым удобным способом</p>
                             </div>
                         </div>
                         <div class="step">
-                            <div class="icon"></div>
+                            <div class="icon"><i class="scheme-operator"></i></div>
                             <div class="text">
                                 <p>Общаетесь с нашим мастером и договариваетесь о встрече</p>
                             </div>
                         </div>
                         <div class="step">
-                            <div class="icon"></div>
+                            <div class="icon"><i class="scheme-bus"></i></div>
                             <div class="text">
                                 <p>Прораб бесплатно выезжает в вашу квартиру/офис и оценивает фронт работ</p>
                             </div>
                         </div>
                         <div class="step">
-                            <div class="icon"></div>
+                            <div class="icon"><i class="scheme-sheet"></i></div>
                             <div class="text">
                                 <p>Мы составляем точную смету</p>
                             </div>
@@ -405,25 +405,25 @@
 
                     <div class="scheme__box__row reverse">
                         <div class="step">
-                            <div class="icon"></div>
+                            <div class="icon"><i class="scheme-offer"></i></div>
                             <div class="text">
                                 <p>Заключаем договор</p>
                             </div>
                         </div>
                         <div class="step">
-                            <div class="icon"></div>
+                            <div class="icon"><i class="scheme-calculator"></i></div>
                             <div class="text">
                                 <p>Рассчитываем количество материалов</p>
                             </div>
                         </div>
                         <div class="step">
-                            <div class="icon"></div>
+                            <div class="icon"><i class="scheme-paint"></i></div>
                             <div class="text">
                                 <p>Закупаем и привозим материалы</p>
                             </div>
                         </div>
                         <div class="step">
-                            <div class="icon"></div>
+                            <div class="icon"><i class="scheme-dreel"></i></div>
                             <div class="text">
                                 <p>Выполняем все прописанные в договоре виды работ</p>
                             </div>
@@ -432,7 +432,7 @@
 
                     <div class="scheme__box__row">
                         <div class="step">
-                            <div class="icon"></div>
+                            <div class="icon"><i class="scheme-term"></i></div>
                             <div class="text">
                                 <p>Сдаем готовый объект точно в срок</p>
                             </div>
