--- a/index.html
+++ b/index.html
@@ -370,6 +370,42 @@
   	    <!-- //////////////////////////////////////////////////////////////////////// -->
 
         <!--=================================================================================================-->
+                                                    <!-- REVIEWS SECTION -->
+        <section class="reviews" id="reviews">
+            <div class="wrapper">
+                <h2>Отзывы о нас</h2>
+
+                <div class="reviews__slider">
+                    <div class="slide">
+                        <figure class="preview"><img src="images/man.png" alt=""></figure>
+                        <div class="text">
+                            <p class="title">Иван Иванов</p>
+                            <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
+                        </div>
+                    </div> <!-- end slide -->
+
+                    <div class="slide">
+                        <figure class="preview"><img src="images/man.png" alt=""></figure>
+                        <div class="text">
+                            <p class="title">Иван Иванов</p>
+                            <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
+                        </div>
+                    </div> <!-- end slide -->
+
+                    <div class="slide">
+                        <figure class="preview"><img src="images/man.png" alt=""></figure>
+                        <div class="text">
+                            <p class="title">Иван Иванов</p>
+                            <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
+                        </div>
+                    </div> <!-- end slide -->
+                </div>
+            </div> <!-- end wrapper -->
+        </section><!-- end reviews section -->
+
+
+
+        <!--=================================================================================================-->
                                                     <!-- Scheme SECTION -->
         <section class="scheme" id="scheme">
             <div class="wrapper">
