--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <div class="offerForm">
                     <p>Заполните форму ― узнайте, как мы поможем  сэкономить 10% на стоимости материалов</p>
-                    <button class="button">Заполнить форму</button>
+                    <button class="button"><span>Заполнить форму</span></button>
                 </div>
             </div><!-- end offerInfo -->
         </section><!-- end offer section --> 
@@ -165,7 +165,7 @@
                             <button class="more">Подробнее</button>
                         </div>
                         <span>Экономичный вариант</span>
-                        <button class="button">Оставить заявку</button>
+                        <button class="button"><span>Оставить заявку</span></button>
                     </div>
 
                     <div class="repairOptions__item">
@@ -174,7 +174,7 @@
                             <button class="more">Подробнее</button>
                         </div>
                         <span>Оптимальный вариант</span>
-                        <button class="button">Оставить заявку</button>
+                        <button class="button"><span>Оставить заявку</span></button>
                     </div>
 
                     <div class="repairOptions__item">
@@ -183,7 +183,7 @@
                             <button class="more">Подробнее</button>
                         </div>
                         <span>Вариант “Люкс”</span>
-                        <button class="button">Оставить заявку</button>
+                        <button class="button"><span>Оставить заявку</span></button>
                     </div>
                 </div><!-- end repairOptions -->
 
@@ -244,7 +244,7 @@
                                                     <!-- Why SECTION -->
         <section class="formSec">
             <div class="wrapper"><!-- start wrapper -->
-                <p class="heading">Получите <span>бесплатный предварительный расчет стоимости ремонта <span>прямо сейчас!</span></p>
+                <p class="heading">Получите <span>бесплатны</span> предварительный расчет стоимости ремонта <span>прямо сейчас!</span></p>
                 <form action="">
                     <span class="inputWrap inputWrap--name">
                         <input type="text" name="name" placeholder="Ваше имя">
@@ -252,7 +252,7 @@
                     <span class="inputWrap inputWrap--tel">
                         <input type="text" name="tel" placeholder="Ваш телефон">
                     </span>
-                    <button class="button button--wide">Получить расчет</button>
+                    <button class="button button--wide"><span>Получить расчет</span></button>
                 </form>
             </div>
         </section>
@@ -336,7 +336,7 @@
                     </div><!-- end tab 2 -->
                 </div><!-- end office tabs -->
 
-                <button class="button button--wide">Хочу также</button>
+                <button class="button button--wide"><span>Хочу также</span></button>
 
             </div><!-- end wrapper -->
         </section><!-- end Examples section -->
@@ -491,7 +491,7 @@
                 <div class="questions__box">
                     <h3 class="title">Остались вопросы?</h3>
                     <p>Свяжитесь с нами, и наш менеджер ответит <br>Вам в ближайшее время!</p>
-                    <button class="button">Связаться</button>
+                    <button class="button"><span>Связаться</span></button>
                 </div>
             </div> <!-- end wrapper -->
         </section><!-- end questions section -->
