--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 </a>
                 <nav><!-- start nav -->
                     <ul>
-                        <li><a href="#" class="active">О компании</a></li>
-                        <li><a href="#">Наши услуги</a></li>
-                        <li><a href="#">Примеры работ</a></li>
-                        <li><a href="#">Отзывы</a></li>
-                        <li><a href="#">Контакты</a></li>
+                        <li><a href="#about" class="active">О компании</a></li>
+                        <li><a href="#services">Наши услуги</a></li>
+                        <li><a href="#examples">Примеры работ</a></li>
+                        <li><a href="#reviews">Отзывы</a></li>
+                        <li><a href="#contacts">Контакты</a></li>
                     </ul>
                 </nav><!-- end nav -->
                 <div class="contactUs">
@@ -69,7 +69,7 @@
 
         <!--=================================================================================================-->
                                                     <!-- About SECTION -->
-        <section class="about">
+        <section class="about" id="about">
             <div class="wrapper"><!-- start offerInfo -->
                <h2>Компания Ремонт плюс</h2>
 
@@ -153,7 +153,7 @@
 
         <!--=================================================================================================-->
                                                     <!-- Options SECTION -->
-        <section class="options">
+        <section class="options" id="services">
             <div class="wrapper"><!-- start wrapper -->
 
                 <h2>Какой вид ремонта Вам подходит?</h2>
@@ -261,7 +261,7 @@
 
          <!--=================================================================================================-->
                                                     <!-- Examples SECTION -->
-        <section class="Examples">
+        <section class="Examples" id="examples">
             <div class="wrapper"><!-- start wrapper -->
                 <h2>Примеры работ</h2>
 
