--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </nav><!-- end nav -->
                 <div class="contactUs">
                     <a href="tel:+7 (926) 898-84-70" class="tel">+7 (926) 898-84-70</a>
-                    <a href="" class="order">Заказать звонок</a>
+                    <a href="#modal-popup" class="order magnific">Заказать звонок</a>
                 </div>
             </div><!-- end wrapper -->
         </header><!-- end header -->
